# eqbank-csv-converter

./: .envrc  .gitignore  CLAUDE.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: python-app.yml
src/eqdownload/: __init__.py  convert.py  eq.py
tests/: conftest.py  test_convert.py
tests/data/: 123456789 Details.csv  999888777 Details(1).csv
