[project]
name = "eqdownload"
version = "0.1.0"
description = "Convert EQ Bank CSV files to OFX format"
requires-python = ">=3.9"
dependencies = [
    "csv2ofx>=0.9.0",
]

[project.scripts]
eqconvert = "eqdownload.convert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eqdownload"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
]

[tool.ruff]
src = ["src", "tests"]

[tool.basedpyright]
include = ["src", "tests"]
exclude = [".venv"]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
pythonVersion = "3.9"

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
