[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "eqdownload"
description = "Convert EQ Bank CSV files to OFX format"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "csv2ofx>=0.9.0",
]

[project.scripts]
eqconvert = "eqdownload.convert:main"

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.basedpyright]
include = ["src", "tests"]
exclude = [".venv"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
pythonVersion = "3.10"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/eqdownload"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
]

[tool.ruff]
src = ["src", "tests"]

[tool.uv]
override-dependencies = [
    "python-slugify>=8.0.0",
]
